[package]
name = "kurtosis-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "2.0"
kurtosis-sdk = "0.85.23"
serde_json = "1.0"
eyre = "0.6"
thiserror = "1.0"
regex = "1.10.2"
reqwest = "0.11.22"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
tonic = "^0.9.2"