[package]
name = "kurtosis-test"
version = "0.1.0"
edition = "2021"
authors = ["Ryan Maugin <ryan@dedsol.xyz>"]
repository = "https://github.com/dedsolxyz/kurtosis-test"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "2.0"
kurtosis-sdk = "0.85.23"
thiserror = "1.0"
regex = "1.10.2"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
tonic = "^0.9.2"